# 4o-audio-streamlit

./: .dockerignore  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  api_metrics_logger.py  app.py  audio_config.py  audio_format_utils.py  benchmark_resampling.py  final_benchmark.py  nixpacks.toml  procfile  pyproject.toml  quick_benchmark.py  render.yaml  requirements.txt  simple_test.py  test_16k_mono.py  test_float_debug.py  test_format_preservation.py  test_pcm16_conversion.py  test_resampling.py  test_subtype_case.py
.streamlit/: config.toml
docs-shared/: project_doc.md
shared_components/: README.md  __init__.py  api_error_utils.py  api_metrics_logger.py  audio_config.py  audio_processor.py  pyproject.toml
v1-streamlit-app/: .dockerfile  README.md  app.py  oauth_debug.py  pyproject.toml  requirements.txt  run.sh
v1-streamlit-app/.streamlit/: config.toml
v2-fastapi-app/: README.md  pyproject.toml
