[project]
name = "shared-components"
version = "0.1.0"
description = "Shared components for GPT-4o Audio Transcription System"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai",
    "requests",
    "pandas",
    "numpy",
    "soundfile",
    "librosa",
    "resampy",
    "ffmpeg-python",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"