[project]
name = "v2-fastapi-app"
version = "0.1.0"
description = "FastAPI GPT-4o Audio Transcription Application (Future)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "jinja2",
    "python-multipart",
    "python-dotenv",
    "PyJWT",
]

[project.scripts]
dev = "uvicorn main:app --reload"

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"